--- a/gateway/.env.example
+++ b/gateway/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Lumen
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 APP_TIMEZONE=UTC
 
 LOG_CHANNEL=stack
@@ -17,3 +17,16 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+AT_GATEWAY_LOCAL_PORT=8000
+AT_GATEWAY_DOCKER_PORT=80
+
+AT_GATEWAY_BASE_URL=http://host.docker.internal:8000
+AT_AUTHENTICATION_BASE_URL=http://host.docker.internal:8001
+AT_APP_BASE_URL=http://host.docker.internal:8002
+
+JWT_SECRET_KEY=1a1235bc95b60820d0ff5099374b57b4
+JWT_ALG=sha256
+JWT_TYP=JWT
+
+MAX_REQUEST_ATTEMPT=10
