--- a/app/.env.example
+++ b/app/.env.example
@@ -8,12 +8,24 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=mongodb
+DB_HOST=host.docker.internal
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+MONGODB_URI=mongodb://root:at-app-db@host.docker.internal:7017
+MONGODB_USER=root
+MONGODB_DATABASE=at-app-db
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+AT_APP_LOCAL_PORT=8002
+AT_APP_DOCKER_PORT=80
+
+AT_APP_LOCAL_DB_PORT=7017
+AT_APP_DOCKER_DB_PORT=27017
+
+AT_GATEWAY_BASE_URL=http://host.docker.internal:8000
+AT_AUTHENTICATION_BASE_URL=http://host.docker.internal:8001
