--- a/authentication/.env.example
+++ b/authentication/.env.example
@@ -9,11 +9,30 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=host.docker.internal
+DB_PORT=33065
+DB_DATABASE=at-authentication
+DB_USERNAME=at-authentication
+DB_PASSWORD=at-authentication
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+AT_AUTHENTICATION_LOCAL_PORT=8001
+AT_AUTHENTICATION_DOCKER_PORT=80
+
+AT_AUTHENTICATION_LOCAL_DB_PORT=33065
+AT_AUTHENTICATION_DOCKER_DB_PORT=3306
+
+AT_AUTHENTICATION_BASE_URL=http://host.docker.internal:8001
+AT_GATEWAY_BASE_URL=http://host.docker.internal:8000
+AT_APP_BASE_URL=http://host.docker.internal:8002
+
+JWT_SECRET_KEY=1a1235bc95b60820d0ff5099374b57b4
+JWT_ALG=sha256
+JWT_TYP=JWT
+
+ACCESS_TOKEN_LIFETIME=60
+REFRESH_TOKEN_LIFETIME=1440
+
+MAX_LOGIN_ATTEMPT=5
