Readme file added for deployment process

--- a/app/.env.example
+++ b/app/.env.example
@@ -14,8 +14,9 @@ DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
-MONGODB_URI=mongodb://root:at-app-db@host.docker.internal:7017
+MONGODB_URI=mongodb://root:rootpass@host.docker.internal:7017
 MONGODB_USER=root
+MONGODB_PASS=rootpass
 MONGODB_DATABASE=at-app-db
 
 CACHE_DRIVER=file
